--- a/index.html
+++ b/index.html
@@ -8,7 +8,21 @@
         <link rel="stylesheet" href="css/style.css">
     </head>
     <body>
-        
+        <main>
+            <div class="container">
+                <h1>CALCOLA IL PREZZO DEL TUO BIGLIETTO</h1>
+                <div class="card">
+                    <label for="name">Nome  Cognome</label>
+                    <input type="text" id="name" name="name">
+                    <label for="number">Km da percorrere</label>
+                    <input type="number" id="number" name="number">
+                    <label for="age">Fascia d'età</label>
+                    <button type="button">Genera</button>
+                    <button type="reset">Annulla</button>
+                </div>
+                <h1>IL TUO BIGLIETTO</h1>
+            </div>
+        </main>
         <script src="js/Script.js"></script>
     </body>
 </html>
