--- a/index.html
+++ b/index.html
@@ -17,8 +17,9 @@
                     <label for="number">Km da percorrere</label>
                     <input type="number" id="number" name="number">
                     <label for="age">Fascia d'età</label>
-                    <button type="button">Genera</button>
-                    <button type="reset">Annulla</button>
+                    <input type="number" id="age" name="age">
+                    <button id="btn-generate" type="button">Genera</button>
+                    <button id="btn-reset" type="reset">Annulla</button>
                 </div>
                 <h1>IL TUO BIGLIETTO</h1>
             </div>
