--- a/index.html
+++ b/index.html
@@ -17,7 +17,11 @@
                     <label for="number">Km da percorrere</label>
                     <input type="number" id="number" name="number">
                     <label for="age">Fascia d'età</label>
-                    <input type="number" id="age" name="age">
+                    <select name="age" id="age" value="age">
+                        <option value="MG">Maggiorenne</option>
+                        <option value="young">Minorenne</option>
+                        <option value="old">Over 65</option>
+                    </select>
                     <button id="btn-generate" type="button">Genera</button>
                     <button id="btn-reset" type="reset">Annulla</button>
                 </div>
