--- a/index.html
+++ b/index.html
@@ -8,26 +8,69 @@
         <link rel="stylesheet" href="css/style.css">
     </head>
     <body>
-        <main>
-            <div class="container">
+        <div class="container">
+            <header>
                 <h1>CALCOLA IL PREZZO DEL TUO BIGLIETTO</h1>
+            </header>
+            <main>
                 <div class="card">
-                    <label for="name">Nome  Cognome</label>
-                    <input type="text" id="name" name="name">
-                    <label for="number">Km da percorrere</label>
-                    <input type="number" id="number" name="number">
-                    <label for="age">Fascia d'età</label>
-                    <select name="age" id="age" value="age">
-                        <option value="MG">Maggiorenne</option>
-                        <option value="young">Minorenne</option>
-                        <option value="old">Over 65</option>
-                    </select>
-                    <button id="btn-generate" type="button">Genera</button>
-                    <button id="btn-reset" type="reset">Annulla</button>
+                    <form id="ticket-form" class="ticket-form">
+                        <div class="ticket-form__fields">
+                            <div class="ticket-form__item">
+                                <label for="name">Nome e cognome</label><br>
+                                <input type="text" id="name" placeholder="Inserisci il nome" pattern="[a-zA-Z\s]+" required>
+                            </div>
+                            <div class="ticket-form__item">
+                                <label for="km">Km da percorrere</label><br>
+                                <input type="number" min="1" id="km" placeholder="Inserisci i km" required>
+                            </div>
+                            <div class="ticket-form__item">
+                                <label for="age">Fascia d'età</label><br>
+                                <select id="age">
+                                    <option value="adult">Maggiorenne</option>
+                                    <option value="underage">Minorenne</option>
+                                    <option value="over">Over 65</option>
+                                </select>
+                            </div>
+                        </div>
+                        <div class="ticket-form__buttons">
+                            <button id="generator" type="submit">Genera</button>
+                            <button id="reset" type="reset">Annulla</button>
+                        </div>
+                    </form>
                 </div>
-                <h1>IL TUO BIGLIETTO</h1>
-            </div>
-        </main>
+                <div class="card">
+                    <div class="ticket-container">
+                        <h2>Il tuo biglietto</h2>
+                        <div class="ticket">
+                            <h3>Dettaglio passeggeri</h3>
+                            <div class="ticket__info">
+                                <div class="ticket-info-name">
+                                    <h3>Nome Passegero</h3>
+                                    <div id="ticket-name"></div>
+                                </div>
+                                <div>
+                                    <h5>Offerta</h5>
+                                    <div id="ticket-offert"></div>
+                                </div>
+                                <div>
+                                    <h5>Carrozza</h5>
+                                    <div id="ticket-wagon"></div>
+                                </div>
+                                <div>
+                                    <h5>Codice CP</h5>
+                                    <div id="ticket-cp"></div>
+                                </div>
+                                <div>
+                                    <h5>Costo Biglietto</h5>
+                                    <div id="ticket-price"></div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </main>
+        </div>
         <script src="js/Script.js"></script>
     </body>
 </html>
